k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitshopp-app
  annotations:
    azure.workload.identity/client-id: af8aef5d-27bf-44c0-a662-2aaa122e1842  # Inject the client ID here
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bitshopp-app
  template:
    metadata:
      labels:
        app: bitshopp-app
    spec:
      containers:
      - name: node-app
        image: bitshoppacr.azurecr.io/bitshopp-app:latest
        ports:
        - containerPort: 3000
      nodeSelector:
        "kubernetes.io/os": linux
