k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bittest-service
spec:
  type: LoadBalancer
  selector:
    app: bittest-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
